# badgeshield

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml
docs/: faq.md  helpful_links.md  index.md  installation.md
docs/css/: extra.css
docs/getting-started/: cli_usage.md  usage.md
docs/js/: extra.js
docs/overrides/: home.html
docs/reference/: batch_generator.md  batch_generator_cli.md  coverage.md  presets.md  sources.md  utils.md
docs/superpowers/plans/: 2026-03-15-badgeshield-cli-modernization.md  2026-03-15-offline-safety-and-visual-richness.md  2026-04-15-pitch-and-high-impact.md  2026-04-17-mkdocs-modernization.md
docs/superpowers/specs/: 2026-03-15-badgeshield-cli-modernization-design.md  2026-03-15-badgeshield-in-memory-api-design.md  2026-03-15-badgeshield-offline-and-visual-design.md  2026-04-15-pitch-and-high-impact-design.md  2026-04-17-mkdocs-modernization-design.md
src/badgeshield/: __init__.py  __main__.py  _version.py  badge_generator.py  coverage.py  generate_badge_cli.py  presets.py  sources.py  utils.py
tests/: __init__.py  conftest.py  test_badge_generator.py  test_coverage.py  test_generate_badge_cli.py  test_preset_cli.py  test_presets.py  test_sources.py
tests/snapshots/: _lighten_hex_4c1d95.txt
